bugfix webview of splitted file, some auto close fixes, removed some magic numbers, removed dead code