@@ -315,8 +315,29 @@
             <configuration>
                 <source>11</source>
                 <target>11</target>
+                <compilerArgs>
+                    <arg>--add-exports</arg>
+                    <arg>java.base/jdk.internal.module=ALL-UNNAMED</arg>
+                </compilerArgs>
             </configuration>
         </plugin>
+        <!--plugin>
+            <groupId>org.graalvm.nativeimage</groupId>
+            <artifactId>native-image-maven-plugin</artifactId>
+            <version>20.1.0</version>
+            <configuration>
+                <mainClass>de.machmireinebook.epubeditor.EpubEditorStarter</mainClass>
+                <imageName>smoekerschriver</imageName>
+            </configuration>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>native-image</goal>
+                    </goals>
+                    <phase>package</phase>
+                </execution>
+            </executions>
+        </plugin-->
     </plugins>
     </build>
 </project>
